--- a/src/main/webapp/resources/css/searchID.css
+++ b/src/main/webapp/resources/css/searchID.css
@@ -1,271 +1,55 @@
-*{
-    font-family: "맑은고딕";
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.login-container{
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-
-#searchIdPwSearch{
-    width: 1200px;
-    height: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-	position: relative;
-    
-    
+.login-form-1{
+    padding: 5%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
-
-#sipTitle{
-    width: 700px;
-    height: 50px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 60px;
+.login-form-1 h3{
     text-align: center;
-    font-size: 40px;
-    font-weight: bold;
-    
+    color: #333;
 }
-
-#siBoxes{
-    width: 450px;
-    height:280px;
-    margin-left: 120px;
-    margin-top: 70px;
-    border: 1px solid rgb(209, 209, 209);
-    background-color: #FAFAFA;
-    float: left;
+.login-form-2{
+    padding: 5%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
-#siTextbox{
-    width: 450px;
-    height: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 13px;
-    
-}
-#siTextTitle{
-    width: 100px;
-    height: 20px;
-    font-size: 17px;
-    color: rgb(0, 0, 0);
-    text-shadow: 0px 0px 0.5px rgb(0, 0, 0);
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    font-weight: bold;
-    float: left;
-    
-}
-#siText{
-    width: 250px;
-    height: 15px;
-    font-size: 11px;
-    margin-top: 6px;
-    float: left;
-    
-}
-#siInputTextBoxes{
-    width: 430px;
-    height: 130px;
-    
-}
-
-.siInputText{
-    width: 400px;
-    height: 50px;
-    margin-left: 20px;
-    border: 1px solid rgb(209, 209, 209);
-    background-color: white;
-    margin-bottom: 13px;
-}
-.siInputTextBox{
-    width: 380px;
-    height: 30px;
-    font-size: 14px;
-    margin-top: 9px;
-    margin-left: 9px;
-    font-weight: bold;
-    border: none;
-
-}
-.siInputTextBox_Email{
-	width: 175px;
-    height: 30px;
-    font-size: 14px;
-    margin-top: 9px;
-    margin-left: 9px;
-    font-weight: bold;
-    border: none;
-}
-#siOkbtn{
-    margin-top: 10px;
-    width: 101px;
-    height: 36px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-#pwBoxes{
-    width: 450px;
-    height:280px;
-    margin-left: 50px;
-  
-    margin-top: 70px;
-    border: 1px solid rgb(209, 209, 209);
-    background-color: #FAFAFA;
-    float: left;
-}
-#spwTextbox{
-    width: 450px;
-    height: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 13px;
-    
-}
-#spwTextTitle{
-    width: 120px;
-    height: 20px;
-    font-size: 17px;
-    color: rgb(0, 0, 0);
-    text-shadow: 0px 0px 0.5px rgb(0, 0, 0);
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    font-weight: bold;
-    float: left;
-}
-#spwText{
-    width: 250px;
-    height: 15px;
-    font-size: 11px;
-    margin-top: 6px;
-    float: left;
-}
-.spwInputText{
-    width: 400px;
-    height: 50px;
-    margin-left: 20px;
-    border: 1px solid rgb(209, 209, 209);
-    background-color: white;
-    margin-bottom: 13px;
-}
-.spwInputTextBox{
-    width: 380px;
-    height: 30px;
-    font-size: 14px;
-    margin-top: 9px;
-    margin-left: 9px;
-    font-weight: bold;
-    border: none;
-}
-#spwOkbtn{
-    width: 99px;
-    height: 36px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 24px;
-}
-
-
-.setDiv {
-    padding-top: 100px;
+.login-form-2 h3{
     text-align: center;
 }
-.mask {
-    position:absolute;
-    left:0;
-    top:0;
-    z-index:9999;
-    background-color:#000;
-    display:none;
+.login-container form{
+    padding: 10%;
 }
-.mask2 {
-    position:absolute;
-    left:0;
-    top:0;
-    z-index:9999;
-    background-color:#000;
-    display:none;
+.btnSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    border: none;
+    cursor: pointer;
 }
-.window {
-    width:500px;
-    height: 300px;
-    display: none;
-    background-color: #ffffff;
-    
-    z-index:99999;
+.login-form-1 .btnSubmit{
+    font-weight: 600;
+    color: #fff;
+    background-color: #0062cc;
 }
-.window2 {
-    width:500px;
-    height: 300px;
-    display: none;
-    background-color: #ffffff;
-    
-    z-index:99999;
+.login-form-2 .btnSubmit{
+    font-weight: 600;
+    color: #fff;
+    background-color: #0062cc;
 }
-#modalTitleBox{
-    width: 500px;
-    height: 40px;
-    background-color: rgb(46, 46, 46);
+.login-form-2 .ForgetPwd{
+    color: #0062cc;
+    font-weight: 600;
+    text-decoration: none;
 }
-#modalTitle{
-    width: 120px;
-    height: 25px;
-    font-size: 19px;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-    float: left;
-    margin-top: 7px;
+.login-form-1 .ForgetPwd{
+    color: #0062cc;
+    font-weight: 600;
+    text-decoration: none;
 }
-#modalTitle2{
-    width: 130px;
-    height: 25px;
-    font-size: 19px;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-    float: left;
-    margin-top: 7px;
-    
+.id-input {
+	width : 300px important;
+	padding-left : 10px;
+	
 }
-.xbtn{
-    width: 40px;
-    height: 33px;
-    font-size: 25px;
-    margin-top: 3px;
-    color: rgb(255, 255, 255);
-    
-    
-    float: right;
-}
-.modalTextBox{
-    width: 400px;
-    height: 120px;
-    border-top: 3px solid;
-    border-bottom: 3px solid;
-    display: inline-block;
-    margin-top: 40px;
-}
-#modalText{
-    width: 400px;
-    height: 30px;
-    margin-top: 35px;
-    font-size: 14px;
-}
-#modalText1{
-    width: 400px;
-    height: 20px;
-    font-size: 14px;
-}
-.close{
-    width: 110px;
-    height: 38px;
-    margin-top: 30px;
-}
-
